--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
             <h3>Bryson Share Menu</h3>
         </div>
         <ul>
-            <li><a href="https://c3c-fbstate-utility-guide.onrender.com" target="_blank"><i class="fas fa-terminal"></i> C3C FBState Guide</a></li>
+            <li><a href="https://c3c-fbstate-utility-guide.onrender.com" target="_blank"><i class="fas fa-terminal"></i> how to get appstate Guide</a></li>
             <li><a href="#" id="faq-btn"><i class="fas fa-question-circle"></i> FAQ</a></li>
             <li><a href="#" id="contact-admin"><i class="fas fa-headset"></i> Contact Admin</a></li>
         </ul>
